--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 deployment:
       tasks:
         - export DEPLOYPATH=/home3/emeravnn/public_html  # Add /<app_folder> if required
-                - /bin cp * $DEPLOYPATH                           #copy all from root 
+                - /bin/cp * $DEPLOYPATH                           #copy all from root 
        
